--- a/redis_notes/01初级篇/01.快速入门.md
+++ b/redis_notes/01初级篇/01.快速入门.md
@@ -291,7 +291,17 @@ cd /usr/local/src/redis-6.2.6
 redis-server redis.conf
 ```
 
+查看Redis进程：
 
+```sh
+ps -ef | grep redis
+```
+
+ 杀死进程：
+
+```sh
+kill -9 14821
+```
 
 停止服务：
 
